Tue Apr 26 09:42:36 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Leader_Follower.h:
        * tao/Leader_Follower.inl:
          Use bool instead of int for several methods

        * tao/Thread_Lane_Resources.cpp:
          Simplied some code

Tue Apr 26 09:26:48 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          MT_NoUpcall_Client_Leader shouldn't run when there is no messaging

Tue Apr 26 09:00:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Disabled some tests with CORBA/e micro

        * tao/Connection_Handler.cpp:
        * tao/Resume_Handle_Deferred.h:
        * tao/Resume_Handle_Deferred.cpp:
          Use reference counting for deletion, also log an error and return -1
          when schedule_timer fails, we have a critical error at that moment

        * tao/Policy_Validator.cpp:
        * tao/TAO_Singleton.cpp:
        * tao/Leader_Follower.cpp:
          Use %@ for logging pointers

Fri Apr 22 12:41:53 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/tests/Bug_3418_Regression/b.conf:
        * orbsvcs/tests/HTIOP/HT_Config.conf:
        * orbsvcs/tests/LoadBalancing/GenericFactory/Application_Controlled/windows.conf:
        * orbsvcs/tests/LoadBalancing/GenericFactory/DeadMemberDetection_App_Ctrl/non-windows.conf:
        * orbsvcs/tests/LoadBalancing/GenericFactory/DeadMemberDetection_App_Ctrl/windows.conf:
        * orbsvcs/tests/LoadBalancing/GenericFactory/DeadMemberDetection_Inf_Ctrl/non-windows.conf:
        * orbsvcs/tests/LoadBalancing/GenericFactory/DeadMemberDetection_Inf_Ctrl/windows.conf:
        * orbsvcs/tests/LoadBalancing/GenericFactory/Infrastructure_Controlled/windows.conf:
        * orbsvcs/tests/LoadBalancing/GenericFactory/Manage_Object_Group/windows.conf:
        * orbsvcs/tests/Notify/Lanes/consumer.conf:
        * orbsvcs/tests/Notify/Lanes/notify.conf: